added next steps

--- a/src/content/blog/startup-etsy-store-16-year-old.mdx
+++ b/src/content/blog/startup-etsy-store-16-year-old.mdx
@@ -66,4 +66,7 @@ We use cad modeling software ***Fusion 360*** and a ***Bambu Labs X Carbon*** 3d
 ---
 ### Where is the Etsy link/store name?
 ##### This is next step in our jorney... check back for a ***link to Etsy COMING SOON!!!***
- 
+
+As of September 23rd, 2023, the 16 year old is letting her creativity out.  She's working on creating her first etsy store including branding with logos and product naming/call to actions.  The 44 year old is waiting for a link so he can make ***snarky comments*** about the Etsy store she set up ;)  
+
+... more to come
